--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "uber-app",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "./scripts/reset-project.js",
@@ -16,32 +16,48 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@mapbox/polyline": "^1.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-firebase/auth": "^20.0.0",
+    "@react-native-firebase/crashlytics": "^20.0.0",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.1",
-    "expo-constants": "~16.0.1",
-    "expo-font": "~12.0.4",
+    "@reduxjs/toolkit": "^2.2.5",
+    "expo": "~51.0.8",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.11",
-    "expo-splash-screen": "~0.27.4",
+    "expo-location": "~17.0.1",
+    "expo-router": "~3.5.15",
+    "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.4",
+    "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.16",
     "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.2",
+    "geolib": "^3.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.2",
     "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "3.10.0",
+    "react-native-maps": "1.14.0",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-toast-message": "^2.2.0",
+    "react-native-web": "~0.19.10",
+    "react-redux": "^9.1.2",
+    "sweetalert2-react-content": "^5.0.7",
+    "twrnc": "^4.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.2.79",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest": "^29.4.0",
+    "jest-expo": "^51.0.0",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
